--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <sonar.projectKey>com.web.cal:webapp</sonar.projectKey>
-        <sonar.host.url>http://18.212.48.144:9000/</sonar.host.url> <!-- Replace with your SonarQube server URL -->
-        <sonar.login>squ_722270a256643df2dc09d6507d9435327cb9bdc0</sonar.login> <!-- Replace with your actual SonarQube token -->
+        <sonar.host.url>http://44.203.65.207:9000/</sonar.host.url> <!-- Replace with your SonarQube server URL -->
+        <sonar.login>
+squ_3dc3e74dcd59ec6d8fff6491b0b4ed22c19d0460</sonar.login> <!-- Replace with your actual SonarQube token -->
     </properties>
 
     <dependencies>
